# k8s-ares

./: Cargo.toml  README.md  crd.yaml
src/: cli.rs  main.rs  program_config.rs  record_spec.rs  xpathable.rs
src/providers/: cloudflare.rs  mod.rs
