[package]
name = "k8s-ares"
version = "0.0.1"
authors = ["RyanSquared <ryan@hashbang.sh>"]
edition = "2018"
license-file = "LICENSE"
description = "ARES: Automatic REcord System - A DNS Operator for Kubernetes"
homepage = "https://github.com/RyanSquared/k8s-ares"
readme = "README.md"
keywords = ["kubernetes", "dns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI Group
clap = "3.0.0-beta.1"
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"

# Kubernetes Group
kube = "0.40.0"
kube-runtime = "0.40.0"
kube-derive = "0.40.0"
k8s-openapi = {version="0.9.0", default-features=false, features=["v1_18"]}

# Utilities
anyhow = "1.0.32"
serde = "1.0.115"
serde_json = "1.0.57"
serde_yaml = "0.8.13"
tokio = {version="0.2", features=["full"]}
futures = "0.3.5"
async-trait = "0.1.38"
reqwest = {version="0.10.8", features=["cookies", "json"]}
trait_enum = "0.5.0"
